# webhook-sender-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clean.sh  run.sh
src/: main.rs
